--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       #ports:
       #- 8080:8080
     labels:
-      - "traefik.http.routers.gitea.rule=Host(`notes.sq.lan`)"
-      - "traefik.http.services.gitea.loadbalancer.server.port=8080"
+      - "traefik.http.routers.sqnotes.rule=Host(`notes.sq.lan`)"
+      - "traefik.http.services.sqnotes.loadbalancer.server.port=8080"
       - "traefik.docker.network=traefik_traefik"
     networks:
       traefik_traefik:
