--- a/.gitea/workflows/docker.yml
+++ b/.gitea/workflows/docker.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Login to registry
         uses: docker/login-action@v2
         with:
-          registry: git.squi.fr
+          registry: gitea.squi.fr
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
